# SoundPrompt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GPL-LICENSE.template  LICENSE  README.md  config.toml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: args.py  config.py  data.py  main.py
src/config/: __init__.py  args.py  config.py
src/data/: database.py  filesystem.py  retrieval.py
src/retrieval/: prompter.py
src/soundprompt/: console.py  main.py  sound.py
src/soundprompt/config/: args.py  config.py  environment.py
src/soundprompt/data/: database.py
src/soundprompt/retrieval/: prompter.py
